# scratches

./: .gitignore  README.md
bob/: flake.nix
botnet/: .gitignore  Cargo.toml  Justfile  flake.nix
botnet/src/: broadcast.rs  echo.rs  gcounter.rs  generate.rs  lib.rs  main.rs  node.rs
drawn_out/: .env  .env.local  .envrc  .gitignore  Dockerfile  Pipfile  README.md  docker-compose.yml  flake.nix
drawn_out/analysis/: Cargo.toml
drawn_out/analysis/migrations/: 0001_add_aggregate.sql  002_add_move_count.sql
drawn_out/analysis/src/: db.rs  lib.rs  main.rs
drawn_out/data/: rook_endgame.pgn  sample.pgn  wow.pgn
drawn_out/migrations/: init.sql
drawn_out/scraping/: .envrc  Dockerfile  Pipfile  Turso.Dockerfile  docker-compose.yaml  flake.nix
drawn_out/src/: analysis.py  data_collection.py  main.py
drawn_out/test/: main.py
hezi/: .gitignore  README.md  flake.nix  mix.exs
hezi/config/: config.exs  dev.exs  prod.exs  runtime.exs  test.exs
hezi/lib/: hezi.ex  hezi_web.ex
hezi/test/: test_helper.exs
hopper/: .gitignore  flake.nix  meson.build
hopper/src/: hopper.cpp
manowar/: .gitignore  README.md  build.zig  flake.nix
manowar/src/: main.zig
nazdak/: .gitignore  .spec-results  flake.nix  index.html  log.txt  package.json  pnpm-lock.yaml  spago.yaml  vite.config.ts
nefi/: CHANGELOG.md  LICENSE  flake.nix  nefi.cabal
roc_nation/: .gitignore  Cargo.toml  Justfile  flake.nix  rust-toolchain.toml
special/: flake.nix  spago.yaml
workerbee/: .gitignore  Cargo.toml  Justfile  README.md  flake.nix  rust-toolchain.toml  wrangler.toml
(+75 files in other folders)
