[package]
name = "chessa"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.97"
pgn-reader = "0.26.0"
reqwest = "0.12.15"
shakmaty = "0.27.3"
shakmaty-syzygy = "0.25.3"
sqlx = { version = "0.8.3", features = ["derive", "macros", "migrate", "runtime-tokio", "sqlite", "tls-native-tls"] }
tokio = { version = "1.44.1", features = ["rt-multi-thread", "tracing", "fs", "macros"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["json"] }
